# pydantic-migrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  versioned_models.py
src/pydantic_migrator/: __init__.py  api.py  cli.py  discovery.py  exceptions.py  generator.py  planner.py  registry.py  scaffold.py  versioning.py
tests/: conftest.py  test_cli.py  test_dx.py  test_generator.py  test_planner.py  test_strict.py
